charts/invoiceshelf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: invoiceshelf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kavorites.koudijs.app/title: InvoiceShelf
    kavorites.koudijs.app/image-url: https://avatars.githubusercontent.com/u/157853350
spec:
  rules:
    - host: shelf.koudijs.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  invoiceshelf
                port:
                  number: 80
  tls:
    - secretName: invoiceshelf-cert
      hosts:
        - shelf.koudijs.me
